fixed padding and made buttons larger on mobile

--- a/assets/src/css/index.scss
+++ b/assets/src/css/index.scss
@@ -99,7 +99,6 @@ main {
 
 	@media (max-width: $breakwidth-medium) {
 		width: 100%;
-		padding: 0 1em;
 	}
 
 	.post-edit-link {
