--- a/assets/src/css/masthead/_hamburger.scss
+++ b/assets/src/css/masthead/_hamburger.scss
@@ -48,9 +48,10 @@
 		border-radius: .2em;
 		width: 100%;
 		height: .16em;
-		left: 0;
+		left: 50%;
 		text-indent: 0;
 		transition: all 0.4s cubic-bezier(0.5, 0.1, 0, 1.2);
+		transform: translateX(-50%) translateY(0);
 
 		&:first-child {
 			top: .1em;
