--- a/assets/src/css/podcasts/_single.scss
+++ b/assets/src/css/podcasts/_single.scss
@@ -219,6 +219,7 @@
 			flex-direction: column;
 
 			margin: 1em auto 0;
+			padding: 0;
 		}
 
 		.description, .player_embed {
