--- a/assets/src/css/rows/_.scss
+++ b/assets/src/css/rows/_.scss
@@ -98,7 +98,7 @@
 		border-radius: .25em;
 		color: #fff;
 		display: inline-block;
-		font-size: .5rem;
+		font-size: .5em;
 		font-weight: 600;
 		line-height: 1;
 		margin: 0 .25em;
@@ -113,7 +113,8 @@
 		}
 
 		@media (max-width: $breakwidth-medium) {
-			margin-bottom: 0.25em;
+			font-size: .6em;
+			margin-bottom: 0.5em;
 			
 			&:last-child {
 				margin-bottom: 0;
