--- a/assets/src/css/rows/home/_we_are.scss
+++ b/assets/src/css/rows/home/_we_are.scss
@@ -11,7 +11,7 @@
 			grid-template-columns: 1fr;
 
 			h2 .st-word:last-child {
-				margin-right: -1em;
+				margin-right: -.75em;
 			}
 		}
 	
